<resources>
    <string name="app_name">Mashiro</string>
    <string name="login_account_hint">用户名/手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_act_login">已有账号？登陆</string>
    <string name="login_act_register">注册</string>
    <string name="register_act_register">注册，并登录</string>
    <string name="register_act_back">已有账号？</string>
    <string name="edit_murmur">Murmur</string>
</resources>
